--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -20,7 +20,8 @@ snapshots. \todo{compare to autograd, venture, church}
 \end{quote}
 
 
-
+TODO: compare to JAX: purely functional intermediate form + transformations, trace-based, so no
+control flow handling
 
 \section{Future Work}
 \label{sec:future-work}
