--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -10,6 +10,24 @@
   type = {Preliminary White Paper}
 }
 
+@article{abadi2020simple,
+  title = {A Simple Differentiable Programming Language},
+  author = {Abadi, Martín and Plotkin, Gordon D.},
+  date = {2020-01},
+  journaltitle = {Proceedings of the ACM on Programming Languages},
+  shortjournal = {Proc. ACM Program. Lang.},
+  volume = {4},
+  pages = {1--28},
+  issn = {2475-1421, 2475-1421},
+  doi = {10.1145/3371106},
+  url = {https://dl.acm.org/doi/10.1145/3371106},
+  urldate = {2020-11-20},
+  abstract = {MARTÍN ABADI, Google Research, United States GORDON D. PLOTKIN, Google Research, United States Automatic differentiation plays a prominent role in scientific computing and in modern machine learning, often in the context of powerful programming systems. The relation of the various embodiments of automatic differentiation to the mathematical notion of derivative is not always entirely clearÐdiscrepancies can arise, sometimes inadvertently. In order to study automatic differentiation in such programming contexts, we define a small but expressive programming language that includes a construct for reverse-mode differentiation. We give operational and denotational semantics for this language. The operational semantics employs popular implementation techniques, while the denotational semantics employs notions of differentiation familiar from real analysis. We establish that these semantics coincide. CCS Concepts: · Theory of computation → Denotational semantics; Operational semantics; · Software and its engineering → Domain specific languages; · Computing methodologies → Machine learning.},
+  file = {/home/philipp/Zotero/storage/NGNZ67BD/Abadi and Plotkin - 2020 - A simple differentiable programming language.pdf},
+  issue = {POPL},
+  langid = {english}
+}
+
 @book{aho1986compilers,
   title = {Compilers: {{Principles}}, Techniques and Tools},
   author = {Aho, A and Sethi, R and Ullman, J},
@@ -297,6 +315,16 @@
   doi = {10.5281/zenodo.4054193},
   organization = {{Zenodo}},
   version = {0.9.15}
+}
+
+@software{churavy2019vchuravy,
+  title = {Vchuravy/{{ConcolicFuzzer}}.Jl},
+  author = {Churavy, Valentin},
+  date = {2019-09-16},
+  origdate = {2018-05-11T21:21:46Z},
+  url = {https://github.com/vchuravy/ConcolicFuzzer.jl/tree/v0.0.1-alpha},
+  urldate = {2020-11-20},
+  abstract = {Prototype of a fuzzer for Julia based on concolic execution}
 }
 
 @report{cohen2016automatic,
@@ -1045,7 +1073,7 @@
   archivePrefix = {arXiv},
   eprint = {2010.01709},
   eprinttype = {arxiv},
-  file = {/home/philipp/Zotero/storage/TFTUES4J/Moses_Churavy_2020_Instead of Rewriting Foreign Code for Machine Learning, Automatically.pdf},
+  file = {/home/philipp/Zotero/storage/TFTUES4J/Moses_Churavy_2020_Instead of Rewriting Foreign Code for Machine Learning, Automatically.pdf;/home/philipp/Zotero/storage/P4CQWPPI/2010.html},
   primaryClass = {cs}
 }
 
@@ -1701,9 +1729,10 @@
   type = {PhD Thesis}
 }
 
-@article{yugibbs,
+@article{yu2009gibbs,
   title = {Gibbs {{Sampling Methods}} for {{Dirichlet Process Mixture Model}}: {{Technical Details}}},
   author = {Yu, Xiaodong},
+  date = {2009},
   pages = {18},
   file = {/home/philipp/Zotero/storage/HYAVTPKH/Yu - Gibbs Sampling Methods for Dirichlet Process Mixtu.pdf},
   langid = {english}
